--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -65,8 +65,7 @@ parts:
       - libxinerama1
       - libxkbcommon0
       - libxrandr2
-      - libxrender1
-      - libcairo
+      - libxrender
       - libopencv-core4.2
       - libopencv-highgui4.2
       - libopencv-imgcodecs4.2
