--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -71,7 +71,7 @@ parts:
       - libopencv-imgcodecs4.2
       - libopencv-imgproc4.2
       - libopencv-videoio4.2
-      - libssl1.1
+      - libssl-dev
       - libcrypto
        
       
