--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -72,7 +72,8 @@ parts:
       - libopencv-imgproc4.2
       - libopencv-videoio4.2
       - libssl-dev
-      
+      - libopencv-dev
+      - libopencv-contrib-dev
        
       
 
