--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -25,7 +25,7 @@ parts:
       - libopencv-dev
       - libssl-dev
       - libopenblas-dev
-      - linlapack-dev
+      - liblapack-dev
     stage-packages:
       - libatk-bridge2.0-0
       - libatk1.0-0
