--- a/snap/gui/progen3d.Desktop
+++ b/snap/gui/progen3d.Desktop
@@ -16,10 +16,10 @@ Comment=Procedural Generator for 3d Modeling
 
 
 # The executable of the application, possibly with arguments.
-Exec=progen3d.jpg
+Exec=progen3d
 
 # The name of the icon that will be used to display this entry
-Icon=progen3d
+Icon=progen3d.jpg
 
 # Describes whether this application needs to be run in a terminal or not
 Terminal=false
