--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -86,5 +86,7 @@ parts:
 apps:
   progen3d:
     command: ProGen3d
+    extensions: [gnome-3-38]
+    common-id: com.github.pghauff55.ProGen3d
 
   
