--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -86,6 +86,8 @@ parts:
 apps:
   progen3d:
     command: ProGen3d
+    plugs:
+      - home
     extensions: [gnome-3-38]
     common-id: com.github.pghauff55.ProGen3d
 
