--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -86,7 +86,7 @@ parts:
     
 apps:
   progen3d:
-    command: progen3d
+    command: ProGen3d
     desktop: progen3d.Desktop
     plugs:
       - home
