--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -79,7 +79,7 @@ parts:
       - locales-all
     organize:
         usr/lib/*-linux-gnu/blas/*: usr/lib/
-        usr/lib/*-linux-gnu/lapack/*: usr/lib/
+        usr/lib/*-linux-gnu/openblas-pthread/liblapack*: usr/lib/
   
 
 
