--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -7,6 +7,11 @@ confinement: strict
 base: core22
 architectures:
   - build-on: [amd64]
+slots:
+   dbus-daemon: # name this whatever you want
+     interface: dbus
+     bus: session
+     name: au.org.progen3d # adjust accordingly
 parts:
   progen3d:
     plugin: make
@@ -87,6 +92,7 @@ parts:
 apps:
   progen3d:
     command: ProGen3d
+    slots: [ dbus-daemon ]
     desktop: progen3d.desktop
     plugs:
       - home
@@ -94,7 +100,7 @@ apps:
       - desktop
       - x11
     common-id: com.github.pghauff55.ProGen3d
-    
+  
 environment:
   LIBGL_DRIVERS_PATH: $SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/dri
 
