--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -4,7 +4,7 @@ summary: Grammar based 3d Procedural Generator
 description: 
   ProGen3d is a grammar based procedural generator with textures and can export to PLY format.
 confinement: strict
-base: core20
+base: core22
 architectures:
   - build-on: [amd64]
 
@@ -92,7 +92,7 @@ apps:
   progen3d:
     command: ProGen3d
 
-    desktop: ProGen3d.Desktop
+    desktop: progen3d.desktop
     plugs:
       - home
       - opengl
