--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -92,7 +92,7 @@ apps:
   progen3d:
     command: ProGen3d
 
-    desktop: progen3d.desktop
+    desktop: usr/share/applications/progen3d.desktop
     plugs:
       - home
       - opengl
