--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: progen3d
-version: "0.96c-Ubuntu20.04"
+version: "0.96a"
 summary: Grammar based 3d Procedural Generator
 description: 
   ProGen3d is a grammar based procedural generator with textures and can export to PLY format.
@@ -7,7 +7,11 @@ confinement: strict
 base: core22
 architectures:
   - build-on: [amd64]
-
+slots:
+   dbus-daemon: # name this whatever you want
+     interface: dbus
+     bus: session
+     name: au.org.progen3d # adjust accordingly
 parts:
   progen3d:
     plugin: make
@@ -79,31 +83,22 @@ parts:
       - libopenblas0-pthread
       - locales-all
     organize:
+        usr/lib/*-linux-gnu/blas/*: usr/lib/
         usr/lib/*-linux-gnu/openblas-pthread/*: usr/lib/
   
-slots:
-  dbus-progen3d:
-    interface: dbus
-    bus: session
-    name: snap.progen3d.progen3d
+
 
     
 apps:
   progen3d:
     command: progen3d
-
+    slots: [ dbus-daemon ]
     desktop: progen3d.desktop
     plugs:
       - home
       - opengl
       - desktop
       - x11
-      - mount-observe
-      - desktop-legacy
-      - gsettings
-      - wayland
-    slots:
-      - dbus-progen3d
     common-id: com.github.pghauff55.ProGen3d
   
 environment:
