--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -91,7 +91,7 @@ slots:
 apps:
   progen3d:
     command: progen3d
-    extensions: [gnome-3-38]
+    extensions: [gnome]
     desktop: progen3d.desktop
     plugs:
       - home
