--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -28,6 +28,7 @@ parts:
       - libopenblas-dev
       - liblapack-dev
     stage-packages:
+      - libglib-2.0
       - libatk-bridge2.0-0
       - libatk1.0-0
       - libatspi2.0-0
