--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -93,12 +93,19 @@ apps:
     command: progen3d
     desktop: progen3d.desktop
     plugs:
-      - home
-      - opengl
-      - desktop
-      - x11
-      - gtk-3-themes
-      - icon-themes
+      home:
+      opengl:
+      desktop:
+      x11:
+      gtk-3-themes:
+        interface: content
+        target: $SNAP/share/themes
+        default-provider: gtk-common-themes:gtk-3-themes
+      icon-themes:
+        interface: content
+        target: $SNAP/share/icons
+        default-provider: gtk-common-themes:icon-themes
+      
 
     slots:
       - dbus-progen3d
