--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -9,6 +9,18 @@ architectures:
   - build-on: [amd64]
 
 parts:
+  hicolor-icon-theme:
+    after: [progen3d]
+    plugin: autotools
+    autotools-configure-parameters:
+      - --prefix=/
+    source: git://anongit.freedesktop.org/xdg/default-icon-theme
+    source-type: git
+    override-build: |
+      snapcraftctl build
+      $SNAPCRAFT_STAGE/update-icon-cache.sh $SNAPCRAFT_PART_INSTALL/share/icons
+    build-packages:
+      - gnome-common
   progen3d:
     plugin: make
     source-type: git
@@ -80,7 +92,7 @@ parts:
       - locales-all
     organize:
         usr/lib/*-linux-gnu/openblas-pthread/*: usr/lib/
-        /snap/progen3d/current/usr/share/icons/hicolor/*: /org/gtk/libgtk/icons/
+
   
 slots:
   dbus-progen3d:
