--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -81,8 +81,8 @@ parts:
       - locales-all
     organize:
         usr/lib/*-linux-gnu/openblas-pthread/*: usr/lib/
-
-  
+        /snap/gtk-common-themes/1535/share/icons/Yaru/16x16/status/*: /org/gtk/libgtk/icons/16x16/status/
+ 
 slots:
   dbus-progen3d:
     interface: dbus
