--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -28,6 +28,7 @@ parts:
       - libopenblas-dev
       - liblapack-dev
       - gnome-common
+      - hicolor-icon-theme
     stage-packages:
       - libatk-bridge2.0-0
       - libatk1.0-0
