--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -32,6 +32,7 @@ parts:
       - yaru-theme-gnome-shell
       - libgdk-pixbuf2.0-0
       - libgdk-pixbuf2.0-dev
+      - mime-support
     stage-packages:
       - libatk-bridge2.0-0
       - libatk1.0-0
