--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -33,6 +33,7 @@ parts:
       - libgdk-pixbuf2.0-0
       - libgdk-pixbuf2.0-dev
       - mime-support
+      - shared-mime-info 
     stage-packages:
       - libatk-bridge2.0-0
       - libatk1.0-0
