--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -34,7 +34,7 @@ parts:
       - libgdk-pixbuf2.0-dev
       - mime-support
       - shared-mime-info
-      
+      - adwaita-icon-theme
     stage-packages:
       - libatk-bridge2.0-0
       - libatk1.0-0
