--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -3,8 +3,8 @@ version: "0.96c-2"
 summary: Grammar based 3d Procedural Generator
 description: 
   ProGen3d is a grammar based procedural generator with textures and can export to PLY format.
-confinement: classic
-base: core22
+confinement: strict
+base: core20
 architectures:
   - build-on: [amd64]
 
