--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -102,6 +102,7 @@ apps:
   progen3d:
     command: progen3d
     desktop: progen3d.desktop
+    extensions: [gnome-3-38]
     plugs:
        - home
        - opengl
