--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -96,29 +96,33 @@ slots:
     interface: dbus
     bus: session
     name: snap.progen3d.progen3d
-
+plugs:
+  gtk-2-engines:
+    interface: content
+    target: $SNAP/lib/gtk-2.0
+    default-provider: gtk2-common-themes
+  gtk-3-themes:
+    interface: content
+    target: $SNAP/data-dir/themes
+    default-provider: gtk-common-themes:gtk-3-themes
+  sound-themes:
+    interface: content
+    target: $SNAP/data-dir/sounds
+    default-provider: gtk-common-themes:sound-themes
+  icon-themes:
+    interface: content
+    target: $SNAP/data-dir/icons
+    default-provider: gtk-common-themes:icon-themes
+  gnome-3-38-2004:
+    interface: content
+    target: $SNAP/data-dir/gnome-platform
+    default-provider: gnome-3-38-2004:gnome-3-38-2004
     
 apps:
   progen3d:
     command: progen3d
     desktop: progen3d.desktop
-    plugs:
-        gtk-3-themes:
-            interface: content
-            target: $SNAP/data-dir/themes
-            default-provider: gtk-common-themes
-        icon-themes:
-                interface: content
-                target: $SNAP/data-dir/icons
-                default-provider: gtk-common-themes
-        sound-themes:
-                interface: content
-                target: $SNAP/data-dir/sounds
-                default-provider: gtk-common-themes
-        platform_snap:
-                interface: content
-                target: $SNAP/gnome-platform
-                default-provider: gnome-3-34-1804
+    plugs: [ desktop, desktop-legacy, gsettings, wayland, x11 ]
     slots:
       - dbus-progen3d
     common-id: com.github.pghauff55.ProGen3d
